# askcsv

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
askcsv/: __init__.py  cli.py  engine.py  llm.py  prompts.py
examples/: generate_sample.py
tests/: test_engine.py
