[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "askcsv"
version = "0.1.0"
description = "用大白话问数据，AI 帮你跑分析 / Ask your CSV questions in plain English, AI does the pandas."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "vibe-GIF", email = "2897729761@qq.com" }]
keywords = ["llm", "ai", "data-analysis", "pandas", "csv", "chatgpt", "natural-language", "数据分析"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.3",
    "numpy>=1.20",
    "matplotlib>=3.4",
    "requests>=2.25",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.0"]
parquet = ["pyarrow>=7.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/vibe-GIF/askcsv"
Repository = "https://github.com/vibe-GIF/askcsv"

[project.scripts]
askcsv = "askcsv.cli:main"

[tool.setuptools.packages.find]
include = ["askcsv*"]
